# rusty-raft

./: .gitignore  Cargo.toml  README.md  build.rs  cluster_config.ron  config.ron
src/: lib.rs  main.rs
src/cluster/: mod.rs
src/consensus/: atomic_util.rs  io_util.rs  macro_util.rs  mod.rs  node.rs  service.rs  state.rs
src/consensus/proto/: raft.proto
