[package]
name = "raft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
prost = "0.12.3"
rand = "0.8.5"
ron = "0.8.1"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.10.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
tonic-build = "0.10.2"
